# trading-system

./: .gitignore  Makefile  Makefile.variables  README.md  go.mod  package-lock.json  package.json
apps/demo-websocket/: Buildfile  Dockerfile  package-lock.json  package.json  server.js
apps/demo-websocket/k8s/base/: k8s-cm.yaml  k8s-dp.yaml  (+2 more)
apps/demo-websocket/src/: App.js  socket.js
apps/ftx-dashboard/: .dockerignore  .gitignore  .prettierrc  Buildfile  Dockerfile  README.md  package-lock.json  package.json  server.js
apps/ftx-dashboard/public/: index.html
apps/ftx-dashboard/src/: App.js  index.js
cloud_functions/: .gcloudignore  Pipfile  README.md  deploy_cf.sh  latency.py  main.py  parse_orders.py  sample.csv  ts_convert.py  upload_bq_latencies.sh  upload_file_bq.sh  upload_file_gcs.sh  upload_files_bq.py
cloud_functions/bq_upload/: clean_log_files.py  upload_logs.sh
helm/drone/: README.md  drone-vault-deployment.yaml  drone-vault-service.yaml  runner-kube-values.yaml  server-values.yaml
helm/jupyterlab/: config.yaml  upgrade.sh
infrastructure/docker/golang-ci/: Buildfile  Dockerfile  build.sh
infrastructure/docker/jupyterlab/: Dockerfile  update_registry.sh
infrastructure/docker/nodejs/: Buildfile  Dockerfile  build.sh
infrastructure/docker/python/: Buildfile  Dockerfile  build.sh
infrastructure/docker/redis/: Buildfile  Dockerfile
infrastructure/eksctl/: README.md  aws-node-patch.yaml  secret.sh  trader_cluster.yaml
infrastructure/eksctl/cluster-autoscaler/: autodiscover.yaml
infrastructure/eksctl/dashboard/: deployment.yaml  ingress.yaml  rbac.yaml
infrastructure/eksctl/datadog/: README.md  values.yaml
infrastructure/eksctl/k8s/: f.mrd.pilot_BTCUSDP.yaml  f.mrd.test_BTCUSDP.yaml  g.mm.pilot_JNTUSDT.yaml
infrastructure/eksctl/nfs-server-provisioner/: README.md  pvc.yaml  values.yaml
infrastructure/eksctl/traefik/: README.md  values.yaml
infrastructure/terraform/: README.md
jobs/mktdata-archiver/: .gitignore  Buildfile  Dockerfile  README.md  ftx_markets_filter.txt  generate_jobs.py  main.py  pyproject.toml
jobs/mktdata-archiver/app/: app.py  gcs.py  parquet.py  tea.py  utils.py
jobs/mktdata-archiver/k8s/: apply.sh  argo-workflow.yaml  delete.sh  generate_jobs.rb  kdelete.sh  merge.sh  process_errors.sh  status.sh
jobs/mktdata-archiver/k8s/base/: k8s-cj.yaml  k8s-cm.yaml  k8s-ssec.yaml  kustomization.yaml
jobs/mktdata-archiver/k8s/overlays/development/: resources.yaml
libs/PyFIX/: pyproject.toml
libs/PyFIX/examples/: client_example.py  protocol_demo.py  server_example.py
libs/PyFIX/pyfix/: FIX44.json
libs/PyFIX/tests/: journaler_tests.py
libs/PyLimitBook/: pyproject.toml
libs/PyLimitBook/pylimitbook/: __init__.py  book.py  bookViewerBook.py  order.py  orderList.py  researchBook.py  tick.py  tree.py
libs/PyLimitBook/sample_data/: L2_XOM_BATS_2010-06-16.csv
libs/ftx_client/: README.md  pyproject.toml  test.py  test2.py
libs/ftx_client/ftx_client/: __init__.py  api.py  classes.py  client.py  mappings.py
libs/mktdata/: README.md  pyproject.toml
libs/mktdata/mktdata/: gcs.py
libs/mwzpyutil/: README.md  pyproject.toml
libs/mwzpyutil/mwzpyutil/: __init__.py  classes.py  config.py  gateio.symbols  logs.py  types.py
libs/paf/: .gitignore  README.md  fixpaf.py  mp_orderflow.py  process_orderflow.py  pyproject.toml
libs/paf/booktesting/: LR - Midprice.ipynb  benchmark_book.sh  book.py  booktest.py  examine_store.py  process_spread.py
libs/paf/paf/events/: __init__.py  enums.py  internal.py  ws.py
libs/paf/paf/fix_client/: __init__.py  client.py  enums.py  order.py  utils.py
libs/paf/paf/signals/: RandomSignal.py  __init__.py  orderflow.py  spread.py
libs/paf/paf/strategies/: __init__.py  basic.py  istrategy.py
libs/paf/paf/tardis_client/: __init__.py  book.py  bookbuilder.py  fastbook.py  instruments.py  orderbook.py  tardis_feed.py
libs/paf/paf/tardis_client/hft_orderbook/: __init__.py  book.py  l2book.py
libs/paf/paf/util/: __init__.py  infra.py  math.py  time.py  window_manager.py
pkg/logger/: logger.go
pkg/redis/: redis.go
services/alerts/: Buildfile  Dockerfile  pyproject.toml
services/alerts/app/: app.py
services/alerts/k8s/base/: k8s-cm.yaml  k8s-ssec.yaml  kustomization.yaml
services/bitmex-dropcopy/: .gitignore  Buildfile  Dockerfile
services/demo-service/: Buildfile
services/ftx-dropcopy/: .gitignore  Buildfile  pyproject.toml  test.py  volumes.py
services/ftx-dropcopy/app/: app.py
services/ftx-dropcopy/k8s/base/: k8s-cm.yaml  k8s-ssec.yaml
services/ftx-dropcopy/k8s/overlays/development/: resources.yaml
services/ftx-hedger/: Buildfile  pyproject.toml
services/ftx-hedger/app/: app.py
services/ftx-hedger/k8s/base/: k8s-cm.yaml  k8s-ssec.yaml
services/ftx-hedger/k8s/overlays/development/: resources.yaml
services/gateio-dropcopy/: .gitignore  Buildfile
services/muwazana.com/: Dockerfile  build_push.sh  index.html
services/muwazana.com/k8s/: deployment.yaml  ingress.yaml  service.yaml
services/pyacm/: backTrade_v2.py  backtest.py  csv_feed.py  live.py  logtrades.py  pyproject.toml  redis_feed.py  strategies.py
services/python-service/: Buildfile  Dockerfile  main.py
services/redis-exposed/: Buildfile
services/redis-node/: Buildfile
services/tardis-machine/: Buildfile
services/websocket-service/: Buildfile
spark/: README.md  dataproc.yaml  dataproc_book_intermediate_to_feature.py  dataproc_book_raw_to_intermediate.py  dataproc_trades_raw_to_feature.py  start.sh  submit.sh  symbols.json  util.py
spark/transform-lob/: lob_transformations.py  util.py
spark/transform-lob/.ipynb_checkpoints/: LOB - Intermediate to Feature-checkpoint.ipynb  LOB - Raw to Intermediate-checkpoint.ipynb  util-checkpoint.py
(+155 files in other folders)
