[tool.poetry]
name = "PyLimitBook"
version = "1.2.3"
description = ""
authors = ["Muwazana S.A. <exchanges@muwazana.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sortedcontainers = "^2.1.0"
six = "^1.14"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
