[tool.poetry]
name = "ftx_client"
version = "1.7.1"
description = ""
authors = ["Muwazana S.A. <exchanges@muwazana.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
pendulum = "2.0.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
