[tool.poetry]
name = "mwzpyutil"
version = "1.5.5"
description = "MWZ python utilities"
authors = ["Muwazana S.A. <exchanges@muwazana.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aioredis = "^1.3.1"
python-json-logger = "^0.1.11"
google-cloud-storage = "^1.27.0"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
