[tool.poetry]
name = "paf"
version = "1.5.0"
description = "Python Analytical Framework"
authors = ["Muwazana S.A. <exchanges@muwazana.com>"]

[[tool.poetry.source]]
name = "mwz"
url = "https://nexus.tools.muwazana.com/repository/muwazana-pypi/simple"

[tool.poetry.dependencies]
python = "^3.7"
#ftx-client = "^1.7.1"
ftx-client = { path = "../../libs/ftx_client" }
# mwzpyutil = "^1.5.5"
mwzpyutil = { path = "../../libs/mwzpyutil" }
sortedcontainers = "^2.1.0"
numpy = "*"
pandas = "^1.0"
# uvloop = "*"
pyarrow = "^0.16.0"
pendulum = "2.0.3"

[tool.poetry.dev-dependencies]
ipdb = "*"
ipython = "*"
black = { version = "*", allow-prereleases = true }
aiochan = "^0.2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
