[tool.poetry]
name = "ftx-hedger"
version = "1.0"
description = "FTX Hedger service"
authors = ["Muwazana S.A. <exchanges@muwazana.com>"]

[[tool.poetry.source]]
name = "mwz"
url = "https://nexus.tools.muwazana.com/repository/muwazana-pypi/simple"

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^1.3.1"
mwzpyutil = "^1.5.0"
ftx-client = "^1.6.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
