[tool.poetry]
name = "pyacm"
version = "0.9"
description = "PyACM Algo"
authors = ["Muwazana S.A. <exchanges@muwazana.com>"]

[[tool.poetry.source]]
name = "mwz"
url = "https://nexus.tools.muwazana.com/repository/muwazana-pypi/simple"

[tool.poetry.dependencies]
python = "^3.7"
backtrader = "^*"
numpy = "*"
pandas = "^1.0"
matplotlib = "*"
TA-lib = "^0.4.18"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
ipdb = "*"
ipython = "*"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
